--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -3,12 +3,11 @@
   <description>short description of the plugin</description>
   <version>1.0</version>
   <vendor>Meredith</vendor>
-  <idea-version since-build="8000"/>
 
   <application-components>
       <component>
-        <interface-class>com.meredith.devtools.intellij.crx.vfs.CrxVirtualFileSystem</interface-class>
-        <implementation-class>com.meredith.devtools.intellij.crx.vfs.CrxVirtualFileSystem</implementation-class>
+        <interface-class>com.meredith.devtools.intellij.crx.CrxApplicationComponent</interface-class>
+        <implementation-class>com.meredith.devtools.intellij.crx.CrxApplicationComponent</implementation-class>
       </component>
   </application-components>
 
@@ -26,12 +25,13 @@
   <extensions defaultExtensionNs="com.intellij">
       <applicationService serviceInterface="com.meredith.devtools.intellij.crx.repository.CrxRepositoryImpl"
                      serviceImplementation="com.meredith.devtools.intellij.crx.repository.CrxRepositoryImpl"/>
+
     <!-- Add your extensions here -->
       <toolWindow
           id="CRX Repository Tree"
           anchor="left"
           secondary="true"
-          factoryClass="com.meredith.devtools.intellij.crx.toolwindow.CRXTreeToolWindowFactory">
+          factoryClass="com.meredith.devtools.intellij.crx.toolwindow.CrxTreeToolWindowFactory">
       </toolWindow>
       <toolWindow
           id="CRX Property View"
@@ -39,5 +39,6 @@
           secondary="true"
           factoryClass="com.meredith.devtools.intellij.crx.toolwindow.CrxPropertyToolWindowFactory">
       </toolWindow>
+      <virtualFileSystem key="crx" implementationClass="com.meredith.devtools.intellij.crx.vfs.CrxVirtualFileSystem"/>
   </extensions>
 </idea-plugin>
